--- a/modules/xact/queue/webspheremq/mdmimpl/WebSphereMQImpl/pom.xml
+++ b/modules/xact/queue/webspheremq/mdmimpl/WebSphereMQImpl/pom.xml
@@ -41,11 +41,6 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>javax.jms</groupId>
-            <artifactId>jms</artifactId> <!-- unfree -->
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-1.2-api</artifactId>
         </dependency>
@@ -61,5 +56,5 @@
             <groupId>com.gip.xyna</groupId>
             <artifactId>xynautils-exceptions</artifactId>
         </dependency>
-    </dependencies>
-</project>
+<dependency><groupId>org.apache.geronimo.specs</groupId><artifactId>geronimo-jms_1.1_spec</artifactId><version>1.1.1</version></dependency>
+</dependencies></project>
