--- a/modules/xact/queue/webspheremq/sharedlib/webspheremq/pom.xml
+++ b/modules/xact/queue/webspheremq/sharedlib/webspheremq/pom.xml
@@ -41,26 +41,6 @@
             <artifactId>com.ibm.mq.allclient</artifactId>            <!-- unfree -->
             <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>com.ibm.mq</groupId>
-            <artifactId>com.ibm.mq.traceControl</artifactId>            <!-- unfree -->
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.sun.jndi</groupId>
-            <artifactId>fscontext</artifactId>            <!-- unfree -->
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>javax</groupId>
-            <artifactId>javaee-api</artifactId>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>javax.jms</groupId>
-            <artifactId>jms</artifactId>            <!-- unfree -->
-            <scope>provided</scope>
-        </dependency>
         <!--      
         <dependency>
             <groupId></groupId> TODO
@@ -68,10 +48,5 @@
             <version></version>
         </dependency>
         -->
-        <dependency>
-            <groupId>com.sun.jndi</groupId>
-            <artifactId>providerutil</artifactId>            <!-- unfree -->
-            <scope>provided</scope>
-        </dependency>
-    </dependencies>
-</project>
+<dependency><groupId>org.apache.geronimo.specs</groupId><artifactId>geronimo-jms_1.1_spec</artifactId><version>1.1.1</version></dependency>
+</dependencies></project>
